<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_kas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        android:padding="1dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_card"
            android:orientation="horizontal"
            android:padding="5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/bg_tanggal"
                android:paddingHorizontal="10dp"
                android:paddingTop="3dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_tanggal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tanggal"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="center_horizontal"
                    android:textSize="14sp"
                    />
                <TextView
                    android:id="@+id/tv_bulan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bulan"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="-11dp"
                    android:textSize="14sp"
                    />
                <TextView
                    android:id="@+id/tv_tahun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tahun"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="-10dp"
                    android:textSize="14sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">
                    <TextView
                        android:id="@+id/tv_jenis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:textSize="16sp"
                        android:text="@string/jenis"
                        android:textColor="@color/black"
                    />
                    <TextView
                        android:id="@+id/tv_jumlah"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:textSize="16sp"
                        android:text="@string/jumlah"
                        android:textColor="@color/black"
                        android:layout_marginStart="5dp"
                    />
                </LinearLayout>
                <TextView
                    android:id="@+id/tv_catatan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:textSize="14sp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="-5dp"
                    android:text="@string/catatan"
                    android:textColor="@color/black"
                    android:fontFamily="@font/helvetica"
                    android:maxLines="1"
                    android:singleLine="true"
                />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>