<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:id="@+id/ll_kas"
    tools:context="com.praktikumobile.kredikas.ArusKasFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:paddingHorizontal="19dp"
        android:background="@drawable/bg_shape"
        android:elevation="12dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/judul_pemasukan"
                android:textColor="@color/colorAccent"
                android:background="@drawable/bg_textview3"
                />
            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/judul_pengeluaran"
                android:textColor="@color/colorAccent"
                android:background="@color/colorPrimary"
                />
            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/judul_jumlah"
                android:textColor="@color/colorAccent"
                android:background="@drawable/bg_textview4"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_textview"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_pemasukan"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/value_pemasukan"
                android:textColor="@color/black"
                android:background="@drawable/bg_textview2"
                />
            <TextView
                android:id="@+id/tv_pengeluaran"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/value_pengeluaran"
                android:textColor="@color/black"
                android:background="@drawable/bg_textview2"
                />
            <TextView
                android:id="@+id/tv_totalKas"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/value_jumlah"
                android:textColor="@color/black"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_shape"
        android:elevation="12dp"
        android:paddingHorizontal="0dp"
        android:paddingBottom="18dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_marginStart="19dp"
            android:text="@string/judulkas"
            />
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="false">
            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:visibility="invisible"
                app:layout_anchor="@id/rv_kas"
                app:layout_anchorGravity="center"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_kas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:listitem="@layout/card_kas"
                />
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_anchor="@id/rv_kas"
                android:foregroundGravity="bottom"
                app:fabSize="normal"
                app:layout_anchorGravity="bottom|end"
                app:srcCompat="@drawable/add"
                android:backgroundTint="@color/colorPrimaryDark"
                />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </LinearLayout>

</LinearLayout>